better api responses, closes #4